# edict-heart

./: pqrst_NN.ipynb  pyproject.toml
src/: main.py
src/cli/: __init__.py
src/config/: config.yaml
src/data/: collector.py
src/models/: config.py  data.py
